--- a/04-calculated-fields/exercises.ipynb
+++ b/04-calculated-fields/exercises.ipynb
@@ -274,13 +274,6 @@
     "    def test_08_distinct_concatenate_conference_division_from_teams(self):\n",
     "        concatenate_conference_division_from_teams = pd.read_sql(distinct_concatenate_conference_division_from_teams, conn)\n",
     "        self.assertEqual(concatenate_conference_division_from_teams.shape, (6, 1))\n",
-    "        column_values = set(concatenate_conference_division_from_teams['conf_div'].values)\n",
-    "        self.assertTrue('East, Southeast' in column_values)\n",
-    "        self.assertTrue('East, Atlantic' in column_values)\n",
-    "        self.assertTrue('East, Central' in column_values)\n",
-    "        self.assertTrue('West, Southwest' in column_values)\n",
-    "        self.assertTrue('West, Northwest' in column_values)\n",
-    "        self.assertTrue('West, Pacific' in column_values) \n",
     "\n",
     "suite = unittest.TestLoader().loadTestsFromTestCase(TestCalculatedFields)\n",
     "runner = unittest.TextTestRunner(verbosity=2)\n",
@@ -318,10 +311,11 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python Data Analysis",
+   "display_name": "Python Fifty Plus",
    "language": "python",
-   "name": "pyda"
+   "name": "pythonfiftyplus"
   },
   "language_info": {
    "codemirror_mode": {
@@ -333,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
