--- a/06-order-by/suggested_answers.ipynb
+++ b/06-order-by/suggested_answers.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15. 從 `covid19` 資料庫的 `time_series` 資料表中依據 `Daily_Case` 找出前十個單日新增確診數最多的日期，參考下列的預期查詢結果。\n",
+    "## 15. 從 `covid19` 資料庫的 `time_series` 資料表中依據 `Daily_Cases` 找出前十個單日新增確診數最多的日期，參考下列的預期查詢結果。\n",
     "\n",
     "- 預期輸入：SQL 查詢語法。\n",
     "- 預期輸出：(10, 3) 的查詢結果。\n",
